# dbsync-client/generated/api/openapi.yaml
@@ -10,7 +10,7 @@ paths:
     get:
       operationId: getStakeInfo
       parameters:
-      - example: stake1uxyt389wtpccs6t26f248d9qszgxmya2qc6a3k06jw2el9g42aktg
+      - example: stake1u8wmu7jc0e4a6fn5haflczfjy6aagwhsxh6w5p7hsyt8jeshhy0rn
         explode: false
         in: path
         name: stakeAddress
@@ -33,7 +33,7 @@ paths:
     get:
       operationId: getReturnAddress
       parameters:
-      - example: stake1uxyt389wtpccs6t26f248d9qszgxmya2qc6a3k06jw2el9g42aktg
+      - example: stake1u8wmu7jc0e4a6fn5haflczfjy6aagwhsxh6w5p7hsyt8jeshhy0rn
         explode: false
         in: path
         name: stakeAddress
@@ -57,7 +57,7 @@ paths:
     get:
       operationId: getUtxos
       parameters:
-      - example: stake1uxyt389wtpccs6t26f248d9qszgxmya2qc6a3k06jw2el9g42aktg
+      - example: stake1u8wmu7jc0e4a6fn5haflczfjy6aagwhsxh6w5p7hsyt8jeshhy0rn
         explode: false
         in: path
         name: address
@@ -78,11 +78,36 @@ paths:
       tags:
       - rest-handler
       x-accepts: '*/*'
+  /cardanoDbSyncApi/{address}/token:
+    get:
+      operationId: getAddressTokenList
+      parameters:
+      - example: stake1u8wmu7jc0e4a6fn5haflczfjy6aagwhsxh6w5p7hsyt8jeshhy0rn
+        explode: false
+        in: path
+        name: address
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                items:
+                  $ref: '#/components/schemas/TokenListItem'
+                type: array
+          description: OK
+      summary: getAddressTokenList
+      tags:
+      - rest-handler
+      x-accepts: '*/*'
   /cardanoDbSyncApi/{address}/statement:
     get:
       operationId: getStatement
       parameters:
-      - example: stake1uxyt389wtpccs6t26f248d9qszgxmya2qc6a3k06jw2el9g42aktg
+      - example: stake1u8wmu7jc0e4a6fn5haflczfjy6aagwhsxh6w5p7hsyt8jeshhy0rn
         explode: false
         in: path
         name: address
@@ -248,45 +273,6 @@ paths:
       tags:
       - rest-handler
       x-accepts: '*/*'
-  /cardanoDbSyncApi/demo/test:
-    get:
-      operationId: getTest
-      responses:
-        "200":
-          content:
-            '*/*':
-              schema:
-                type: string
-          description: OK
-      tags:
-      - demo-rest-handler
-      x-accepts: '*/*'
-  /cardanoDbSyncApi/demo/rated:
-    get:
-      operationId: getRated
-      responses:
-        "200":
-          content:
-            '*/*':
-              schema:
-                type: string
-          description: OK
-      tags:
-      - demo-rest-handler
-      x-accepts: '*/*'
-  /cardanoDbSyncApi/demo/cached:
-    get:
-      operationId: getCached
-      responses:
-        "200":
-          content:
-            '*/*':
-              schema:
-                type: string
-          description: OK
-      tags:
-      - demo-rest-handler
-      x-accepts: '*/*'
 components:
   schemas:
     StakeInfo:
@@ -306,6 +292,11 @@ components:
         totalStake:
           format: int64
           type: integer
+      required:
+      - poolHash
+      - stake
+      - tickerName
+      - totalStake
       type: object
     ReturnAddress:
       example:
@@ -337,6 +328,49 @@ components:
           type: integer
         sourceAddress:
           type: string
+      required:
+      - sourceAddress
+      - txHash
+      - txIndex
+      - value
+      type: object
+    TokenListItem:
+      example:
+        image: image
+        maName: maName
+        quantity: 1
+        maPolicyId: maPolicyId
+        name: name
+        maMintId: 0
+        slotNo: 6
+        maFingerprint: maFingerprint
+      properties:
+        maMintId:
+          format: int64
+          type: integer
+        slotNo:
+          format: int64
+          type: integer
+        maPolicyId:
+          type: string
+        maName:
+          type: string
+        maFingerprint:
+          type: string
+        quantity:
+          format: int64
+          type: integer
+        name:
+          type: string
+        image:
+          type: string
+      required:
+      - image
+      - maFingerprint
+      - maName
+      - maPolicyId
+      - name
+      - quantity
       type: object
     AccountStatementRow:
       example:
@@ -383,6 +417,17 @@ components:
           items:
             type: string
           type: array
+      required:
+      - change
+      - epoch
+      - in
+      - operations
+      - out
+      - rewards
+      - sum
+      - timestamp
+      - txHash
+      - withdrawn
       type: object
     StakeAddress:
       example:
@@ -390,28 +435,6 @@ components:
       properties:
         address:
           type: string
-      type: object
-    TokenListItem:
-      example:
-        maName: maName
-        quantity: 1
-        maPolicyId: maPolicyId
-        maMintId: 0
-        slotNo: 6
-      properties:
-        maMintId:
-          format: int64
-          type: integer
-        slotNo:
-          format: int64
-          type: integer
-        maPolicyId:
-          type: string
-        maName:
-          type: string
-        quantity:
-          format: int64
-          type: integer
       type: object
     TokenDetails:
       example:
@@ -442,6 +465,14 @@ components:
         totalSupply:
           format: int64
           type: integer
+      required:
+      - fingerprint
+      - maName
+      - maPolicyId
+      - maPolicyScript
+      - slotNo
+      - totalSupply
+      - txHash
       type: object
     PoolInfo:
       example:
@@ -452,6 +483,9 @@ components:
           type: string
         poolHash:
           type: string
+      required:
+      - poolHash
+      - tickerName
       type: object
     EpochStake:
       example:
@@ -463,5 +497,8 @@ components:
         amount:
           format: int64
           type: integer
+      required:
+      - amount
+      - stakeAddress
       type: object
 
